# puzzle-a-day

./: Cargo.toml  LICENSE.md  README.md
docs/: index.html  script.js  worker.js
docs/rust_scripts/: package.json  puzzle_a_day.d.ts  puzzle_a_day.js  puzzle_a_day_bg.wasm  puzzle_a_day_bg.wasm.d.ts
rust/: Cargo.toml
rust/src/: active_board.rs  common.rs  lib.rs  main.rs  solver.rs  tile_helper.rs
rust/src/custom_boards/: gmdm.rs  gmdmwd.rs  gt.rs  mod.rs  nova_scotia.rs
src/: common.rs  main.rs
web/: index.html  script.js  style.css  worker.js
web/rust_scripts/: puzzle_a_day_bg.wasm  puzzle_a_day_bg.wasm.d.ts
